syntax = "proto2";

package com.linbit.linstor.proto.common;

// Node connection
message NodeConn
{
    optional string node_conn_uuid = 1;
    required string node_name_1 = 3;
    optional string node_1_uuid = 2;
    required string node_name_2 = 5;
    optional string node_2_uuid = 4;
    map<string, string> node_conn_props = 6;
    optional string node_diskless_stor_pool_uuid = 7;
}
